src/raml1/test/data/TCK/raml-0.8/InvalidIncludeTags/test001/api.raml
#%RAML 0.8
title: test API
schemas:
  - sch: !includesome/arbitrary/path/to/nowhere/example.json
/resource:
  get:
      responses:
        200:
          body:
            application/json:
              schema: !includesome/arbitrary/path/to/nowhere/example.json
              example: !includesome/arbitrary/path/to/nowhere/example.json
